test/cli/test/verify-attestations/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
  - name: app
    image: ghcr.io/example/app:1.0
